Diff viewer: decode git blobs with the file's real charset, not force-UTF-8 (#435)
Comparing a Latin-1 or UTF-16 file against its committed version (Compare
with HEAD / a branch / a commit, and the Commit window's staged/unstaged
rows) fetched each git blob via `git show` and decoded it as UTF-8. Every
non-ASCII byte came out as mojibake, and because the working side was read
correctly, the whole file rendered as one spurious change.

Add a raw-bytes subprocess path (ProcessRunner.runBytes/BytesResult, the
core the String run now delegates to) and GitService.showBytes, then have
DiffCoordinator decode a blob — and a closed working file — the same way
the editor reads it: a BOM wins, else the file's .editorconfig charset,
else UTF-8 (EditorConfigCharset.resolveName + decode). Both sides now
agree on the encoding, so text is right and only real edits show.

The now-unused force-UTF-8 GitService.show is removed.

Tests: pure resolveName cases + a real-git FX regression test that commits
a Latin-1 file with an .editorconfig charset=latin1 and asserts the HEAD
pane reads the accented text, not the U+FFFD mojibake (proven to fail on
the old force-UTF-8 path).

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>